--- a/estilo.css
+++ b/estilo.css
@@ -201,7 +201,7 @@ html{
     left: 0;
     width: 0;
     height: 100%;
-    background-color: #e8eeed;
+    background-color: #1CB698;
     z-index: -1;
     transition: 1s;
 }
