--- a/estilo.css
+++ b/estilo.css
@@ -565,6 +565,11 @@ html {
 /* *********************/
 /* seccion P O R T F O L I O */
 /* *********************/
+#portfolio {
+    max-width: 1100px;
+    padding: 100px 0;
+    margin: auto;
+}
 
 #portfolio .titulo-seccion {
   text-align: center;
