--- a/estilo.css
+++ b/estilo.css
@@ -566,9 +566,11 @@ html {
 /* seccion P O R T F O L I O */
 /* *********************/
 #portfolio {
-    max-width: 1100px;
-    padding: 100px 0;
-    margin: auto;
+  background-color: #252a2e;
+  color: #fff;
+  max-width: 1100px;
+  padding: 100px 0;
+  margin: auto;
 }
 
 #portfolio .titulo-seccion {
