--- a/estilo.css
+++ b/estilo.css
@@ -506,11 +506,11 @@ html {
   bottom: 4px;
 }
 /* SECCION PORTFOLIO */
-.portfolio {
+/* .portfolio {
   background-color: #252a2e;
   color: #fff;
   padding: 50px 20px;
-}
+} */
 .portfolio .contenido-seccion {
   max-width: 1100px;
   margin: auto;
@@ -566,11 +566,11 @@ html {
 /* seccion P O R T F O L I O */
 /* *********************/
 #portfolio {
-  background-color: #252a2e;
+    background-color: #252a2e;
   color: #fff;
-  max-width: 1100px;
-  padding: 100px 0;
-  margin: auto;
+    max-width: 1100px;
+    padding: 100px 0;
+    margin: auto;
 }
 
 #portfolio .titulo-seccion {
