--- a/estilo.css
+++ b/estilo.css
@@ -506,11 +506,11 @@ html {
   bottom: 4px;
 }
 /* SECCION PORTFOLIO */
-/* .portfolio {
+.portfolio {
   background-color: #252a2e;
   color: #fff;
   padding: 50px 20px;
-} */
+} 
 .portfolio .contenido-seccion {
   max-width: 1100px;
   margin: auto;
